# jax-shenanigans

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
notebooks/: Diff_benchmark.py  GNN.py  OLS_comparison.py
notes/: learnings.md
resources/: resources.md
src/jax_shenanigans/: functions.py  utils.py
src/jax_shenanigans/core/: _DAGNode.py  _Tensor.py  __init__.py  const.py  utils.py
src/jax_shenanigans/dl/: losses.py  weights_init.py
src/jax_shenanigans/dl/layers/: _GCNLayer.py  _Layer.py  __init__.py
src/jax_shenanigans/dl/layers/activations/: _LeakyReLU.py  _ReLU.py  _Sigmoid.py  __init__.py
src/jax_shenanigans/dl/models/: _Model.py  _Sequential.py  __init__.py
src/jax_shenanigans/graphs/: _Graph.py  __init__.py
src/jax_shenanigans/utils/: __init__.py  benchmarking.py  io.py  jax.py  performance.py  typing.py
