[project]
name = "jax-shenanigans"
version = "0.1.0"
description = ""
authors = [
    {name = "Alejandro", email = "alejandrobarongarcia10@gmail.com"},
]
dependencies = [
    "jax>=0.4.8",
    "loguru>=0.7.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
