[project]
name = "jax-shenanigans"
version = "0.1.0"
description = ""
authors = [
    {name = "Alejandro", email = "alejandrobarongarcia10@gmail.com"},
]
dependencies = [
    "jax>=0.4.8",
    "loguru>=0.7.0",
    "tqdm>=4.65.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pre-commit>=3.2.2",
]
